--- a/package.json
+++ b/package.json
@@ -73,10 +73,13 @@
 		]
 	},
 	"dependencies": {
+		"lucide-react": "^0.447.0",
 		"prop-types": "^15.6.1",
-		"react": "^16.8.4",
-		"react-dom": "^16.8.4",
+		"react": "^18.3.1",
+		"react-bootstrap": "^2.10.5",
+		"react-dom": "^18.3.1",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"sonner": "^1.5.0"
 	}
 }
